Fix alignment of .vertical__nav__item--extend a

--- a/src/css/minside/_molecules/_nav-primary.css
+++ b/src/css/minside/_molecules/_nav-primary.css
@@ -134,7 +134,7 @@
   .vertical__nav__item--extend {
     flex: 1 0 auto;
     display: flex;
-    justify-content: flex-end;
+    align-items: flex-end;
     
     a {
       border-top: 1px solid var(--silver);
